--- a/src/components/heroForm/heroForm.module.css
+++ b/src/components/heroForm/heroForm.module.css
@@ -1,3 +1,15 @@
+.container {
+  opacity: 0;
+  animation: ani 1.5s forwards;
+}
+@keyframes ani {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .button {
   display: block;
   margin-right: auto;
@@ -23,16 +35,44 @@
   font-weight: 300;
   cursor: pointer;
 }
+.dataInput {
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
 .textarea {
   display: block;
   margin-right: auto;
   margin-left: auto;
 }
-.dataInput {
-  display: block;
-  margin-top: 5px;
-  margin-right: auto;
+.imputAndButton {
+  position: relative;
+  max-width: 17%;
   margin-left: auto;
-  padding-right: 35px;
-  margin-bottom: 20px;
+  margin-right: auto;
+  height: 400px;
+  background: rgb(236, 236, 243);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+.dataInput + label {
+  border: 1px solid black;
+  width: 105px;
+  border-radius: 7px;
+  margin-top: -30px;
+  margin-left: 34px;
+  padding: 5px;
+  font-size: 0.85em;
+  font-weight: 400;
+  color: rgb(88, 88, 88);
+  background-color: rgb(235, 235, 235);
+  display: flex;
+  cursor: pointer;
+}
+
+.dataInput:focus + label,
+.dataInput + label:hover {
+  background-color: rgb(223, 223, 223);
+}
+.label {
+  position: absolute;
 }
