--- a/src/components/heroList/heroList.module.css
+++ b/src/components/heroList/heroList.module.css
@@ -1,12 +1,19 @@
 .ul {
+  opacity: 0;
+  animation: ani 2.5s forwards;
+
   display: flex;
   justify-content: center;
 }
 .li {
+  padding: 5px;
+  background: rgb(236, 236, 243);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   display: block;
   margin: 5px;
 }
 .name {
+  text-decoration: wavy;
   padding: 5px;
   margin: 0;
   width: 100%;
@@ -20,4 +27,16 @@
 .nameAndImg {
   display: block;
   max-width: 180px;
+}
+@keyframes ani {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.Link {
+  text-decoration: none;
+  color: black;
 }
