--- a/src/components/heroForm/heroForm.module.css
+++ b/src/components/heroForm/heroForm.module.css
@@ -46,6 +46,7 @@
   margin-left: auto;
 }
 .imputAndButton {
+  border: 1px solid rgb(193, 193, 212);
   position: relative;
   max-width: 17%;
   margin-left: auto;
