--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,3 +1,20 @@
+.Overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1200;
+}
+
+.Modal {
+  max-width: calc(100vw - 48px);
+  max-height: calc(100vh - 24px);
+}
 .container {
   opacity: 0;
   animation: ani 1.5s forwards;
@@ -49,9 +66,10 @@
   border: 1px solid rgb(193, 193, 212);
   position: relative;
   max-width: 326px;
+  padding: 10px;
   margin-left: auto;
   margin-right: auto;
-  height: 400px;
+  height: 360px;
   background: rgb(236, 236, 243);
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
