--- a/src/components/HeroDetails/HeroDetails.module.css
+++ b/src/components/HeroDetails/HeroDetails.module.css
@@ -44,6 +44,7 @@
 }
 .buttonUpdate {
   border: 1px solid black;
+  width: 74px;
   border-radius: 7px;
   margin-left: 5%;
   padding: 5px;
@@ -57,6 +58,7 @@
   border: 1px solid black;
   border-radius: 7px;
   padding: 5px;
+  margin-left: 16px;
   align-items: center;
   color: rgb(88, 88, 88);
   font-size: 1em;
