--- a/src/components/heroList/heroList.module.css
+++ b/src/components/heroList/heroList.module.css
@@ -3,8 +3,12 @@
   animation: ani 2.5s forwards;
 
   display: flex;
+  width: 1000px;
+  flex-wrap: wrap;
   justify-content: center;
   padding-left: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 .li {
   padding: 5px;
